<resources>
    <string name="app_name">SunnyPsychologicalAssessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabbar_text_news">资讯</string>
    <string name="tabbar_text_test">测试</string>
    <string name="tabbar_text_history">记录</string>
    <string name="tabbar_text_other">其他</string>
    <string name="fg_news_tv">资讯</string>
    <string name="fg_test_tv">测试</string>
    <string name="fg_history_tv">历史记录</string>
    <string name="fg_other_tv">其他</string>
    <string name="tabbar_text_consult">咨询</string>
    <string name="fg_consult_about">心里咨询室XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX。欢迎大家来骚扰。</string>
    <string name="address">地址：XXXXXX</string>
    <string name="tel">电话：xxxxx</string>
    <string name="email">Email:asasss@aaaa.com</string>
    <string name="qq">QQ:XXXXXX</string>
    <string name="wechat">微信:xxxxx</string>
    <string name="new2_text">当你心情糟糕时，你的同事可能会成为压死骆驼的最后一根“稻草”。工作压力、家庭矛盾、爱情问题，或是身边琐事，由于上述任何原因，使你心烦意乱、怒气冲天的时候，那你的同事很有可能会遭受池鱼之灾。所以，当下次你要对同事“爆发”时，请记住以下职场专家提供的“金玉良言”帮助你摆脱冲突，重获和平，使相处变得愉快。
　　冷静resolutionworks创始人stewart levin表示：如果冲突的结局是分出胜负，那么意味着两败俱伤，这种结局通常会把战火烧得更猛更持久，更别提解决冲突了。
　　与其和同事剑拔弩张，最好先尝试进行一段冷静、有建设性的对话，两人借对话达成共识，使双方都满意而归。如果用这个方法，双方都是赢家.
　　找到问题根源,你想和隔壁工作间的同事讨论紧急工作，但她却在打私人电话，但这并不是会成为你怒火中烧的真正原因。一个“讨人厌”的行为很少是冲突的真正根源。
　　“如果冲突的根源是‘本已破坏的工作关系’，那么绝大多数试图解决本次冲突的方法都无济于事。”levine表示。在试图解决问题之前，先明确冲突“源”何而来吧。
　　锻炼情绪
　　“当一个人情绪低落，他的记忆力、注意力、学习能力和决策能力都会下降。”daniel goleman在emotional intelligence中表示。以下是三个通过锻炼情绪帮助你解决办公室冲突的有效之法：
　　换位思考：想想你对别人的批评会产生什么样的效果。如果你言辞中透露出侮辱同事蠢笨、懒惰、轻率之意，你得到的只能是别人更强烈的攻击和厌恶。与同事们相处时要换位思考，解决问题才是目的，不要挟私报复。
　　考虑他人工作风格：试着不要因为他人工作方式与你不同就心生愤怒。
　　学会有效谈判：尝试通过冷静对话，了解你和你的同事希望达到怎样的工作效果，然后共同协商策略来实现。
　　管理压力
　　自身的压力会使我们暴躁易怒。wiser ways to work管理咨询公司总裁gloria dunn认为“工作场所就是烦恼制造者的聚居地。”她建议大家使用以下几种策略来学习控制、管理压力：
　　每天划出一部分时间远离他人打扰。
　　学会说“不”。建立一些界限，并坚持遵守。
　　创造舒适愉悦的工作环境，让工作环境给你力量。
　　每天锻炼身体。
　　其实，最好的避免办公室冲突的方式就是拒绝卷入相处过程的争吵中。一个“巴掌拍不响”，如果你头脑清醒、观点鲜明、对同事态度不卑不亢、热情洋溢，与大家和睦共处便不成问题。</string>
    <string name="default_text">here is a text</string>
    <string name="next">下一题</string>
    <string name="option_a">optionA</string>
    <string name="option_b">optionB</string>
    <string name="option_c">optionC</string>
    <string name="option_d">optionD</string>
    <string name="option_e">optionE</string>
    <string name="yale_level0">无强迫行为</string>
    <string name="yale_level1">轻度严重6－15分(单纯的强迫思维或强迫行为，仅需要6-9分)   　　处于轻度严重的强迫症患者，其症状已经对患者的生活、学习或职业开始造成一定的影响，患者的症状会随着环境和情绪的变化不断的波动，如果不能尽早的解决，很容易会朝着严重的程度发展、泛化，此时是治疗效果最理想的时期，建议尽早治疗。</string>
    <string name="yale_level2">中度严重16－25分(单纯的强迫思维或强迫行为，仅需要10-14分)   　　这属于中等的强迫症状，表示症状的频率或严重程度已经对生活、学习或职业造成明显的障碍，导致患者可能无法有效执行其原有的角色功能，甚至在没有出现有效的改善前，可能导致抑郁症状，甚至出现自杀念头，必须接受心理治疗或者药物治疗。</string>
    <string name="yale_level3">重度严重25分以上(单纯的强迫思维或强迫行为，仅需要15分以上)   　　此时，患者的强迫症状已经非常严重，完全无法执行原有的角色功能，甚至连衣食住行等生活功能都无法进行。通常患者已经无法出门，将自己禁锢家中，无时无刻都有强迫思考，无时无刻都在执行强迫行为。重度严重的患者极易出现抑郁症状，通常需要强制治疗。</string>
    <string name="save_result">保存</string>
    <string name="result_score">测试得分：</string>
    <string name="fg_record_tv">测试记录为空</string>
    <string name="sas_lever0">你没有焦虑症状。</string>
    <string name="sas_lever1">你有轻度焦虑症，可以自我调整心态，放松心情。</string>
    <string name="sas_lever2">你有中度焦虑症，需要寻求心理咨询。</string>
    <string name="sas_lever3">你有重度焦虑症，需要及时就医。</string>
    <string name="gses_lever0">你非常缺乏自信心，需要自我调整心态。</string>
    <string name="gses_lever1">你略微缺乏自信心，后续从各种事情上给自己重新定位。</string>
    <string name="gses_lever2">你的自信心处于正常范围之内。</string>
    <string name="gses_lever3">你的自信心非常高，但要正确看待自己的缺点。</string>
    <string name="sds_lever0">无抑郁症 0-52</string>
    <string name="sds_lever1">轻度抑郁：53—62</string>
    <string name="sds_lever2">中度抑郁：63 — 72</string>
    <string name="sds_lever3">重度抑郁：>72</string>
    <string name="eq_lever0">EQ水平偏低，情绪常波动起伏，人际交往、处理问题及社会适应能力欠缺。但也毋需恐惧，应当找出薄弱环节，有针对性地加强自我修养和锻炼，以不断提高自己的情商水平与综合素质。</string>
    <string name="eq_lever1">EQ水平居中，尚需保持和发扬优势面，克服不足，不断提高。</string>
    <string name="eq_lever2">EQ水平较高，情绪稳定，乐观自信，客观冷静，人际交往、处理问题及社会适应能力较强，是一种积极健康的心理状态。</string>
    <string name="tabbar_text_record">记录</string>

</resources>
