<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestActivity">

    <TextView
        android:id="@+id/activity_test_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_text" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_test_tv"
        android:id="@+id/radio_group">

        <RadioButton
            android:id="@+id/option_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_a" />

        <RadioButton
            android:id="@+id/option_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_b" />

        <RadioButton
            android:id="@+id/option_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_c" />

        <RadioButton
            android:id="@+id/option_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_d" />

        <RadioButton
            android:id="@+id/option_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_e" />
    </RadioGroup>

    <Button
        android:id="@+id/activity_test_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/radio_group" />

</RelativeLayout>
