<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.colofans.sunnypsychologicalassessment.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?actionBarSize">

        <TextView
            android:id="@+id/toolbar_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/material_blue_grey_800"
        />

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fafafa"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_news"
            style="@style/RadioButtonBottomTab"
            android:checked="true"
            android:drawableTop="@drawable/ic_news"
            android:text="@string/tabbar_text_news" />

        <RadioButton
            android:id="@+id/rb_test"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/ic_test"
            android:text="@string/tabbar_text_test" />

        <RadioButton
            android:id="@+id/rb_history"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/ic_consult"
            android:text="@string/tabbar_text_consult" />

        <RadioButton
            android:drawableTop="@drawable/ic_other"
            android:id="@+id/rb_other"
            style="@style/RadioButtonBottomTab"
            android:text="@string/tabbar_text_other" />
    </RadioGroup>

</LinearLayout>
